<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 設定等共通部分で使用するリソース -->
    <string name="app_name" translatable="false">Fake GP Base</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="builder_name">Builder name</string>
    <string name="fighter_name">Fighter name</string>
    <string name="sleep_deterrent">Sleep deterrent</string>
    <string name="use_tag">Use NFC tag for sleep deterrent</string>
    <string name="dont_suppress_sleep">Don\'t suppress the sleep of the device</string>
    <string name="other">other</string>
    <string name="no_nfc_present">No NFC Feature present.\nPlease choose your GUNPLA manually.</string>
    <string name="dialgo_info">Info</string>
    <string name="dialog_warn">Warning</string>
    <string name="wish_to_enable">NFC Feature isn\'t enabled.\nDo you wish to enable NFC feature?</string>
    <string name="nfc_not_enabled">NFC Feature isn\'t enabled.</string>
    <string name="class_name">Class name</string>
    <string name="scale_name">Scale name</string>
    <string name="model_name">Model name</string>
    <string name="gunpla_name">GUNPLA name</string>
    <string name="scrach_built_level">Scratch built Level</string>
    <string name="non_scratched">Non-Scratch built</string>
    <string name="partial_scratched">Partial-Scratch built</string>
    <string name="full_scratched">Full-Scratch built</string>
    <string name="select_gunpla">Select GUNPLA</string>
    <string name="register_gunpla">Register GUNPLA</string>
    <string name="please_select">Please Select</string>
    <string name="no_gunpla_registered">No GUNPLA data registered.\nPlease register GUNPLA data before.</string>
    <string name="input_new">Please input new item</string>
    <string name="save_data">Save</string>
    <string name="read_tag">Read Tag</string>
    <string name="write_tag">Write Tag</string>
    <string name="please_touch">Please touch the tag to write the GUNPLA info.</string>
    <string name="init_data">Initialize data</string>
    <string name="confirm_init_data">Are you sure to initialize displaying data?</string>
    <string name="edit_data">Edit data</string>
    <string name="confirm_write_tag">This tag has another data.\nDo you wish to overwrite it?</string>
    <string name="delete_data">Delete data</string>
    <string name="confirm_delete_data">Do you really want to delete this data?</string>
    <string name="about_app">About this App</string>
    <string name="bsd_license">BSD License</string>
    <string name="formation_sans" translatable="false">Formation Sans</string>
    <string name="about_app_summary">GP Base like App\nto respond to NFC tags</string>
    <string name="version">Version</string>
    <string name="saved">Saved GUNPLA:</string>

    <!-- GPベースの英語のみ部分で使用するリソース -->
    <string name="builder_gpbase" translatable="false">BUILDER</string>
    <string name="name_gpbase" translatable="false">NAME</string>
    <string name="fighter_gpbase" translatable="false">FIGHTER</string>
    <string name="scale_gpbase" translatable="false">SCALE</string>
    <string name="class_gpbase" translatable="false">CLASS</string>
    <string name="model_gpbase" translatable="false">MODEL No.</string>
    <string name="operator_gpbase" translatable="false">OPERATOR</string>
    <string name="gunpla" translatable="false">GUNPLA</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>
    <string name="title_activity_gunpla_register" translatable="false">GunplaRegisterActivity</string>

</resources>
