<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="builder_name"
        android:inputType="textEmailAddress"
        android:title="@string/builder_name" />
    <EditTextPreference
        android:key="fighter_name"
        android:inputType="textEmailAddress"
        android:title="@string/fighter_name" />
    <Preference
        android:key="formation_sans"
        android:title="@string/formation_sans" />
    <Preference
        android:key="about_app"
        android:title="@string/about_app"/>
    <!--
    <SwitchPreference
        android:key="use_tag_for_wake_lock"
        android:defaultValue="false"
        android:title="@string/sleep_deterrent"
        android:summaryOn="@string/use_tag"
        android:summaryOff="@string/dont_suppress_sleep" />
    -->
</PreferenceScreen>