<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.formula97.fakegpbase.GunplaRegisterActivity">
    <item
        android:id="@+id/action_submit"
        android:title="@string/save_data"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always|withText" />
    <item
        android:id="@+id/action_reset_view"
        android:title="@string/init_data"
        android:orderInCategory="99"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="always|withText" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_data"
        android:orderInCategory="98"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="always|withText" />
    <item
        android:id="@+id/action_write_tag"
        android:title="@string/write_tag"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="97"
        android:showAsAction="always|withText" />
</menu>
