<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/tvAppTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_app_summary"
        android:inputType="textMultiLine"
        android:gravity="center_horizontal"
        android:id="@+id/tvBody"
        android:layout_below="@+id/tvAppTitle"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentRight="true"
        android:text="0.0"/>

    <TextView
        android:id="@+id/version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/tvAppVersion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@id/tvAppVersion"
        android:layout_marginRight="8dp"
        android:text="@string/version"/>
</RelativeLayout>
